Start to refactoring